--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@nuxt/content": "^3.2.2",
-    "nuxt": "^3.15.4"
+    "@nuxt/image": "1.10.0",
+    "@nuxt/ui": "^3.0.2",
+    "@tailwindcss/typography": "^0.5.16",
+    "nuxt": "^3.16.1"
   }
 }
