--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@nuxt/image": "1.10.0",
     "@nuxt/ui": "^3.0.2",
     "@tailwindcss/typography": "^0.5.16",
-    "nuxt": "^3.16.2"
+    "better-sqlite3": "^12.2.0",
+    "date-fns": "^4.1.0",
+    "nuxt": "^4.0.0"
   }
 }
